Fix div selection error that was causing layout issues with the constructor appended task

--- a/src/styles.css
+++ b/src/styles.css
@@ -198,7 +198,7 @@ body {
     justify-content: center;
 }
 
-#content div:nth-child(5) {
+#content div div:nth-child(5) {
     /* project category div */
     grid-area: 2 / 2 / 3 / 7;
     display: flex;
